--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,6 @@
 
 html {
 box-sizing: border-box;
-background-color: #e2e2e2;
-
 -moz-text-size-adjust: 100%;
 -ms-text-size-adjust: 100%;
 -webkit-text-size-adjust: 100%;
@@ -17,3 +15,30 @@ text-size-adjust: 100%;
 *, *::before, *::after {
 box-sizing: inherit;
 }
+
+body {
+    background-color: black;
+    background-image: url(../img/stars.svg);
+}
+
+.asteroid {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    top: 100px;
+    left: 100px;
+    animation: box-rotate 3s ease-in-out infinite alternate;
+}
+
+
+@keyframe box-rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    
+    100% {
+        transform: rotate(360deg);
+    }
+    
+}
+  
