--- a/css/main.css
+++ b/css/main.css
@@ -18,21 +18,27 @@ box-sizing: inherit;
 
 body {
     background-color: black;
-    background-image: url(../img/stars.svg);
-}
-
-img {
-	display: block;
-	width: 100%;
 }
 
 .stars {
-	background-image: url("../images/stars.svg");
-	position: absolute;
-	height: 100%;
-	width: 100vh;
-    animation: stars-scale 20s infinite alternate;
+	background-image: url(../img/stars.svg);
+	height: 100vh;
+    -webkit-animation: stars-scale 20s infinite alternate;
 	animation: stars-scale 20s infinite alternate;
+}
+
+
+
+@-webkit-keyframes stars-scale {
+
+	0% {
+		-webkit-transform: scale(1,1);
+	}
+
+	100% {
+		-webkit-transform: scale(2,2);
+	}
+
 }
 
 @keyframes stars-scale {
@@ -46,7 +52,6 @@ img {
 	}
 
 }
-
 .asteroid {
     position: absolute;
     width: 200px;
@@ -66,3 +71,5 @@ img {
 	}
 
 }
+
+.star-
