ship position fixed

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,8 @@ body {
 .stars {
 	background-image: url(../img/stars.svg);
 	height: 100vh;
+    width: 100%; 
+    position: absolute;
     -webkit-animation: stars-scale 20s infinite alternate;
 	animation: stars-scale 20s infinite alternate;
 }
@@ -36,7 +38,7 @@ body {
 	}
 
 	100% {
-		-webkit-transform: scale(2,2);
+		-webkit-transform: scale(1.5,1.5);
 	}
 
 }
@@ -48,7 +50,7 @@ body {
 	}
 
 	100% {
-		transform: scale(2,2);
+		transform: scale(1.5, 1.5);
 	}
 
 }
@@ -59,18 +61,6 @@ body {
     top: 200px;
     animation: asteroid-rotate 10s ease-in-out infinite;
     -webkit-animation: asteroid-rotate 10s ease-in-out infinite;
-}
-
-@keyframes asteroid-rotate {
-
-	0% {
-		transform: rotate(0deg);
-	}
-
-	100% {
-		transform: rotate(360deg);
-	}
-
 }
 
 @-webkit-keyframes asteroid-rotate {
@@ -85,6 +75,93 @@ body {
 
 }
 
+@keyframes asteroid-rotate {
 
-.star-destroyer {
+	0% {
+		transform: rotate(0deg);
+	}
+
+	100% {
+		transform: rotate(360deg);
+	}
+
+}
+
+
+.ship {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    left: 50%;
+    top: 200px;
+    -webkit-animation: bounce 5s ease-in-out infinite;
+    animation: bounce 5s ease-in-out infinite;
+}
+
+@-webkit-keyframes bounce {
+    
+    0% {
+        -webkit-transform: translateY(0);
+    }
+    
+    50% {
+        -webkit-transform: translateY(100px);
+    }
+     
+    65% {
+        -webkit-transform: translateX(-55px);
+        -webkit-transform: rotate(95deg);
+    }
+    
+    75% {
+        -webkit-transform: translateY(75px);
+    }
+    
+    88% {
+        -webkit-transform: translateX(100px);
+    }
+    
+    95% { 
+        -webkit-transform: translateY(100px);
+    }
+    
+    100% { 
+        -webkit-transform: translateY(0);
+    }
+    
+}
+
+@keyframes bounce {
+    
+    0% {
+        transform: translateY(0);
+    }
+    
+    50% {
+        transform: translateY(100px);
+    }
+     
+    65% {
+        transform: translateX(-55px);
+        transform: rotate(95deg);
+    }
+    
+    75% {
+        transform: translateY(75px);
+    }
+    
+    88% {
+        transform: translateX(100px);
+    }
+    
+    95% { 
+        transform: translateY(100px);
+    }
+    
+    100% { 
+        transform: translateY(0);
+    }
+    
+}
+
     
