--- a/css/main.css
+++ b/css/main.css
@@ -164,4 +164,17 @@ body {
     
 }
 
+
+@media only screen and (min-width: 25em) {
+
+}
+
+@media only screen and (min-width: 38em) {
+
+}
+
+@media only screen and (min-width: 60em) {
+
+}
+
     
